{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 55,
  "lineage": "3b3c36f9-acd3-a98d-48c9-aa32cd105f09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-public-ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046ce4ddf61dbad7d",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-02dfea2ab36fcdbe5",
            "domain": "vpc",
            "id": "eipalloc-046ce4ddf61dbad7d",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-07f62e556e0d43cf1",
            "private_dns": "ip-10-0-1-50.eu-north-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-51-231-248.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.231.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-gateway",
            "aws_network_interface.test-webserver-network-interface",
            "aws_security_group.test-allow-web-sec-group",
            "aws_subnet.test-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e4606740c9c9381",
            "arn": "arn:aws:ec2:eu-north-1:284275925172:instance/i-01862133533cd19c5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01862133533cd19c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-07f62e556e0d43cf1"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f62e556e0d43cf1",
            "private_dns": "ip-10-0-1-50.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "13.51.231.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03fed75c064969860",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ad0b185931608c5",
            "tags": {
              "Name": "test-webserver-instance",
              "test_tag": "test_tag_value"
            },
            "tags_all": {
              "Name": "test-webserver-instance",
              "test_tag": "test_tag_value"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094ad81bd75004707"
            ]
          },
          "dependencies": [
            "aws_network_interface.test-webserver-network-interface",
            "aws_security_group.test-allow-web-sec-group",
            "aws_subnet.test-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:284275925172:internet-gateway/igw-023a72cb444f8d96e",
            "id": "igw-023a72cb444f8d96e",
            "owner_id": "284275925172",
            "tags": {
              "Name": "test-gateway"
            },
            "tags_all": {
              "Name": "test-gateway"
            },
            "vpc_id": "vpc-07ea0166cf605d16d"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test-webserver-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:284275925172:network-interface/eni-07f62e556e0d43cf1",
            "id": "eni-07f62e556e0d43cf1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:55:f2:3a:54:48",
            "owner_id": "284275925172",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-094ad81bd75004707"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ad0b185931608c5"
          },
          "dependencies": [
            "aws_security_group.test-allow-web-sec-group",
            "aws_subnet.test-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:284275925172:route-table/rtb-017738dc4edf7a248",
            "id": "rtb-017738dc4edf7a248",
            "owner_id": "284275925172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023a72cb444f8d96e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route-table"
            },
            "tags_all": {
              "Name": "test-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ea0166cf605d16d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-gateway",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072f5937180ba7617",
            "route_table_id": "rtb-017738dc4edf7a248",
            "subnet_id": "subnet-09ad0b185931608c5"
          },
          "dependencies": [
            "aws_internet_gateway.test-gateway",
            "aws_route_table.test-route-table",
            "aws_subnet.test-subnet1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-allow-web-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:284275925172:security-group/sg-094ad81bd75004707",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094ad81bd75004707",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow web traffic",
            "name_prefix": "",
            "owner_id": "284275925172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-allow-web-sec-group"
            },
            "tags_all": {
              "Name": "test-allow-web-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ea0166cf605d16d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:284275925172:subnet/subnet-09ad0b185931608c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ad0b185931608c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284275925172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-subnet1"
            },
            "tags_all": {
              "Name": "test-subnet1"
            },
            "vpc_id": "vpc-07ea0166cf605d16d"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:284275925172:vpc/vpc-07ea0166cf605d16d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c31d81e2e072a0ad",
            "default_route_table_id": "rtb-09b5d8de51993cb12",
            "default_security_group_id": "sg-00fd496a1e60a88f0",
            "dhcp_options_id": "dopt-0b827aa82690908f9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ea0166cf605d16d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b5d8de51993cb12",
            "owner_id": "284275925172",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}